Fixed text overlap on team section

--- a/app/assets/stylesheets/_signinup.scss
+++ b/app/assets/stylesheets/_signinup.scss
@@ -271,7 +271,7 @@ input.forget-signup{
 }
 
 .team-box{
-  width: 65%;
+  width: 60%;
   margin: 0 auto;
   text-align: center;
 }
@@ -281,12 +281,6 @@ input.forget-signup{
   margin: 0 0 10px 5px;
   font-size: 25px;
 
-  // text-align: left;
-}
-
-.team-text{
-  color:$white;
-  text-align: left;
 }
 
 .team-container{
@@ -307,8 +301,10 @@ input.forget-signup{
 
 .player-con{
   width: 100%;
-  height: 175px;
+  height: 200px;
   margin: 20px 0 0 0;
+  color: $white;
+  text-align: left;
 }
 
 @media screen and (max-width: 968px) {
